[gd_scene load_steps=2 format=3 uid="uid://bm1la1g05stsh"]

[ext_resource type="Script" uid="uid://fyp57h86dgt5" path="res://shop/ComboCardShop/combo_card_shop.gd" id="1_1tmp3"]

[node name="ComboCardShop" type="Node2D"]
script = ExtResource("1_1tmp3")

[node name="Panel" type="Panel" parent="."]
offset_left = 80.0
offset_top = 96.0
offset_right = 1103.0
offset_bottom = 596.0

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 927.0
offset_top = 416.0
offset_right = 1016.0
offset_bottom = 476.0
text = "ÐžÐ±Ð½Ð¾Ð²Ð¸Ñ‚ÑŒ
Ð·Ð° 1ðŸ’²"

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 823.0
offset_top = 421.0
offset_right = 920.0
offset_bottom = 470.0

[node name="Price" type="Label" parent="Panel/Button2"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 33.0
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = -58.0
offset_top = -82.0
offset_right = 38.0
offset_bottom = -50.0

[node name="open_pack_shop" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 823.0
offset_top = 342.0
offset_right = 1015.0
offset_bottom = 411.0
text = "ÐœÐ°Ð³Ð°Ð·Ð¸Ð½ ÐŸÐ°ÐºÐ¾Ð²"

[node name="hide_price_timer" type="Timer" parent="."]

[node name="Invetory btn" type="Button" parent="."]
offset_left = 1120.0
offset_top = 104.0
offset_right = 1276.0
offset_bottom = 174.0
theme_override_font_sizes/font_size = 30
text = "Ð˜Ð½Ð²ÐµÑ‚Ð°Ñ€ÑŒ"

[node name="Exit btn" type="Button" parent="."]
offset_left = 1120.0
offset_top = 8.0
offset_right = 1270.0
offset_bottom = 78.0
theme_override_font_sizes/font_size = 30
text = "Ð’Ñ‹Ñ…Ð¾Ð´"

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/open_pack_shop" to="." method="_on_pack_shop_button"]
[connection signal="pressed" from="Invetory btn" to="." method="_on_inventory_button"]
[connection signal="pressed" from="Exit btn" to="." method="_on_exit_button"]
